syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_package = "org.trading";
option java_outer_classname = "MessageProvider";

enum OrderType {
    UNKNOWN_ORDER_TYPE = 0;
    MARKET = 1;
    LIMIT = 2;
}

enum Side {
    UNKNOWN_SIDE = 0;
    BUY = 1;
    SELL = 2;
}

enum FillStatus {
    UNKNOWN_FILL_STATUS = 0;
    FULLY_FILLED = 1;
    PARTIALLY_FILLED = 2;
}


message Message {
    EventType evenType = 1;
    SubmitOrder submitOrder = 2;
    LimitOrderAccepted limitOrderAccepted = 3;
    MarketOrderAccepted marketOrderAccepted = 4;
    TradeExecuted tradeExecuted = 5;
    MarketOrderRejected marketOrderRejected = 6;
}

message SubmitOrder {
    string symbol = 2;
    string broker  = 3;
    int32 amount = 4;
    Side side = 5;
    OrderType orderType = 6;
    double price = 7;
}

message LimitOrderAccepted {
    string id = 1;
    string broker  = 2;
    int32 quantity = 3;
    Side side = 4;
    double limit = 5;
    string symbol = 6;
    google.protobuf.Timestamp time = 7;
}

message MarketOrderAccepted {
    string id = 1;
    string broker  = 2;
    int32 quantity = 3;
    Side side = 4;
    string symbol = 5;
    google.protobuf.Timestamp time = 6;
}

message MarketOrderRejected {
    string id = 1;
    FillStatus fillStatus = 2;
    google.protobuf.Timestamp time = 3;
}

message TradeExecuted {
    string buyingId = 1;
    string buyingBroker  = 2;
    string sellingId = 3;
    string sellingBroker  = 4;
    int32 quantity = 5;
    double price = 6;
    double buyingLimit = 7;
    double sellingLimit = 8;
    google.protobuf.Timestamp time = 9;
    string symbol = 10;
    OrderType buyingOrderType = 11;
    OrderType sellingOrderType = 12;
}

enum EventType {
    UNKNOWN_MESSAGE = 0;
    SUBMIT_ORDER = 1;
    LIMIT_ORDER_ACCEPTED = 2;
    MARKET_ORDER_ACCEPTED = 3;
    TRADE_EXECUTED = 4;
    MARKET_ORDER_REJECTED = 5;
}



